Hice que la página salude, una calculadora de impuestos y una suma

--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"> </script>
+    <!-- CS -->
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body>
+    <h1>Página para averiguar precio de servicios que están en dólares, a pesos</h1>
     
+    
+    <!-- JS -->
+    <script src="js/main.js" ></script>
 </body>
 </html>
