--- a/index.html
+++ b/index.html
@@ -10,8 +10,29 @@
 </head>
 
 <body>
-    <h1>Página para averiguar precio de servicios que están en dólares, a pesos</h1>
-    
+    <h1 id="RegistarLibro">Regístre su libro</h1>
+        <section>
+            <form id="MiFormulario">
+                <label for="titulo">Título:</label>
+                <input type="text" id="titulo" name="titulo">
+                <br><br>
+                <label for="autor">Autor:</label>
+                <input type="text" id="autor" name="autor">
+                <br><br>
+                <label for="anio">Año de Publicación:</label>
+                <input type="number" id="anio" name="anio">
+                <br><br>              
+                <label for="editorial">Editorial:</label>
+                <input type="text" id="editorial" name="editorial">
+                <br><br>
+                <input type="submit" value="Registrar libro">
+            </form>
+
+                <div id="librosGuardados">
+                    <h2>Libros Guardados:</h2>
+                        <ul id="listaLibros"></ul>
+                </div>
+        </section>
     
     <!-- JS -->
     <script src="js/main.js" ></script>
